[project]
name = "prompter"
version = "0.1.0"
description = ""
authors = [
    {name = "sdkim96",email = "seong960603@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "guardrails-ai (>=0.6.3,<0.7.0)",
]

[tool.poetry]
packages = [{include = "prompter"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
